Initializing the Project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AbdAlla-AboElMagd.github.io/Freelancia",
+  "homepage": "http://penpro-team.github.io/Freelancia",
   "name": "freelancia",
   "version": "0.1.0",
   "private": true,
