--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-popper": "^2.3.0",
