--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "install": "^0.13.0",
+    "npm": "^11.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
