--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "i18next": "^24.2.3",
     "install": "^0.13.0",
     "npm": "^11.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-popper": "^2.3.0",
     "react-redux": "^9.2.0",
